--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,12 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build ./dockerfiles --file Dockerfile --tag $IMAGE_NAME
-
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
   
+      - name: Build image
+        run: docker build --build-arg PARENT_IMAGE=docker.pkg.github.com/thirsty2/quicklogic-fpga-toolchain/symbiflow-ql:1.3.0 ./dockerfiles --file Dockerfile --tag $IMAGE_NAME
+
       - name: Push image
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
