--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "qorc-example-apps"]
 	path = qorc-example-apps
 	url = https://github.com/QuickLogic-Corp/qorc-example-apps.git
+[submodule "quick-feather-dev-board"]
+	path = quick-feather-dev-board
+	url = https://github.com/QuickLogic-Corp/quick-feather-dev-board.git
+[submodule "TinyFPGA-Programmer-Application"]
+	path = TinyFPGA-Programmer-Application
+	url = https://github.com/QuickLogic-Corp/TinyFPGA-Programmer-Application.git
