--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - tar -C $INSTALL_DIR -xvf arch.tar.gz
   - conda install $CONDA_FLAGS -c quicklogic-corp/label/ql yosys="0.8.0_0002_gc3b38fdc 20200901_073908" python=3.7
   - conda install $CONDA_FLAGS -c quicklogic-corp/label/ql yosys-plugins="1.2.0_0009_g9ab211c 20201001_121833"
-  - conda install $CONDA_FLAGS -c quicklogic-corp/label/ql vtr="v8.0.0_rc2_2894_gdadca7ecf 20201028 110349"
+  - conda install $CONDA_FLAGS -c quicklogic-corp/label/ql vtr="v8.0.0_rc2_2894_gdadca7ecf 20201008_140004"
   - conda install $CONDA_FLAGS -c quicklogic-corp iverilog
   - conda install $CONDA_FLAGS -c tfors gtkwave
   - conda install $CONDA_FLAGS make lxml simplejson intervaltree git pip
